# monty

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  plan-todo.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.zed/: settings.json
benches/: main.rs
crates/monty/: Cargo.toml
crates/monty-cli/src/: main.rs
crates/monty-js/: .gitignore  README.md  package.json
crates/monty-python/: .mypy-stubtest-allowlist  Cargo.toml  README.md  example.py  monty.pyi  pyproject.toml
crates/monty-python/src/: convert.rs  exceptions.rs  external.rs  lib.rs  limits.rs  monty_cls.rs
crates/monty-python/tests/: test_basic.py  test_exceptions.py  test_external.py  test_inputs.py  test_limits.py  test_print.py  test_readme_examples.py  test_serialize.py  test_start.py  test_types.py
crates/monty/benches/: main.rs
crates/monty/src/: args.rs  callable.rs  evaluate.rs  exception_private.rs  exception_public.rs  exceptions.rs  expressions.rs  for_iterator.rs  fstring.rs  function.rs  heap.rs  intern.rs  lib.rs  namespace.rs  object.rs  operators.rs  parse.rs  prepare.rs  resource.rs  run.rs  run_frame.rs  signature.rs  snapshot.rs  value.rs
crates/monty/src/builtins/: chr.rs  mod.rs
crates/monty/src/bytecode/: builder.rs  compiler.rs  op.rs
crates/monty/src/bytecode/vm/: async_exec.rs  attr.rs  call.rs  collections.rs  compare.rs  exceptions.rs  format.rs  mod.rs
crates/monty/src/types/: bytes.rs  dict.rs  list.rs  long_int.rs  range.rs  set.rs  str.rs  tuple.rs  type.rs
crates/monty/test_cases/: iter__dict_mutation.py  iter__for.py  iter__not_iterable.py  list__ops.py  str__index_not_found.py  str__methods.py  str__partition_empty.py  str__rsplit_empty_sep.py  str__split_empty_sep.py  tuple__ops.py  type__exception_attr_error.py  unpack__non_sequence.py  unpack__not_enough.py  unpack__ops.py  unpack__too_many.py  while__all.py
crates/monty/tests/: binary_serde.rs  datatest_runner.rs  inputs.rs  json_serde.rs  main.rs  parse_errors.rs  print_writer.rs  py_object.rs  resource_limits.rs  snapshot.rs  try_from.rs
scripts/: startup_performance.py
src/: bin.rs  builtins.rs  callable.rs  evaluate.rs  exceptions.rs  exit.rs  expressions.rs  fstring.rs  function.rs  heap.rs  lib.rs  main.rs  namespace.rs  object.rs  object_types.rs  operators.rs  parse.rs  parse_error.rs  prepare.rs  resource.rs  run.rs  types.rs  value.rs
src/values/: bytes.rs  dict.rs  list.rs  py_trait.rs  py_value.rs  str.rs  tuple.rs
test_cases/: args__list_insert_too_few.py  args__list_insert_too_many.py  bytes__method_bytes_repr.py  bytes__method_bytes_str.py  bytes__repr_various_cases.py  dict__get_default_same_dict.py  dict__get_unhashable_key.py  dict__getitem_self.py  dict__literal_unhashable_key.py  dict__method_items.py  dict__method_keys.py  dict__method_values.py  dict__pop_unhashable_key.py  edge__int_float_mod.py  execute_ok__method_ellipsis_repr.py  execute_ok__method_ellipsis_str.py  execute_raise__raise_list.py  hash__str_basic.py  id__bytes_literals_distinct.py  id__empty_list_id.py  id__int_copy_distinct.py  id__is_number_is_number.py  id__list_literals_distinct.py  id__singleton_distinct.py  id__str_literals_distinct.py  id__tuple_literals_distinct.py  is_variant__ellipsis_is_ellipsis.py  is_variant__ellipsis_is_none.py  is_variant__string_is_ellipsis.py  parse_error__complex.py  refcount__cycle_mutual_reference.py  refcount__cycle_self_reference.py  refcount__dict_basic.py  refcount__dict_get.py  refcount__dict_overwrite.py  refcount__immediate_skipped.py  refcount__list_append_ref.py  refcount__list_concat.py  refcount__list_iadd.py  refcount__nested_list.py  (+10 more)
tests/: datatest_runner.rs  id.rs  inputs.rs  json_serde.rs  main.rs  resource_limits.rs  try_from.rs
