[package]
name = "monty"
version = "0.1.0"
edition = "2021"

[lib]
name = "monty"
path = "src/lib.rs"

[[bin]]
name = "monty"
path = "src/bin.rs"

[dependencies]
rustpython-parser = { git = "https://github.com/charliermarsh/RustPython.git", rev = "c3147d2c1524ebd0e90cf1c2938d770314fd5a5a" }
ahash = "0.8.0"
num = "0.4.0"
#strum = { version = "0.25", features = ["derive"] }
#strum_macros = "0.25"

[dev-dependencies]
paste = "1.0.7"
pyo3 = { version = "0.19.0", features = ["auto-initialize"] }
criterion = "0.5"

[[bench]]
name = "main"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
#debug = true

[lints.clippy]
# dbg_macro = "warn"
# print_stdout = "warn"

# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
# float_cmp = "allow"
# fn_params_excessive_bools = "allow"
# if_not_else = "allow"
# match_bool = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
# missing_panics_doc = "allow"
# module_name_repetitions = "allow"
# must_use_candidate = "allow"
needless_pass_by_value = "allow"  # TODO disable
similar_names = "allow"
# single_match_else = "allow"
# struct_excessive_bools = "allow"
too_many_lines = "allow"
# unnecessary_wraps = "allow"
unused_self = "allow"
# used_underscore_binding = "allow"
