[workspace]
resolver = "2"
members = ["crates/monty", "crates/monty-cli", "crates/monty-python"]

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT"
authors = ["Samuel Colvin <samuel@pydantic.dev>"]
description = "A sandboxed, snapshotable Python interpreter written in Rust."
categories = ["compilers", "emulators", "development-tools"]
keywords = ["python", "interpreter", "sandbox", "embedded"]
homepage = "https://github.com/pydantic/monty/"
repository = "https://github.com/pydantic/monty/"
documentation = "https://github.com/pydantic/monty/"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false

[workspace.lints.clippy]
dbg_macro = "warn"
# print_stdout = "warn"

# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"  # TODO remove and fix
cast_possible_wrap = "allow"  # TODO remove and fix
cast_sign_loss = "allow"  # TODO remove and fix
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"  # TODO disable
similar_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
