[project]
name = "monty"
version = "0"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.7",
]

# https://beta.ruff.rs/docs/configuration/
[tool.ruff]
line-length = 120
include = [
    "scripts/**/*.py",
    "crates/monty/test_cases/**/*.py",
]
# Exclude files with intentional syntax errors (used for testing parse error handling)
extend-exclude = [
    "crates/monty/test_cases/nonlocal__error_module_level.py",
]

[tool.ruff.lint]
extend-select = [
    "Q",      # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RUF100", # https://docs.astral.sh/ruff/rules/unused-noqa/
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 14 }
ignore = [
    "F632", # ignore replace `is` with `==` - we have lots of these tests
    "F811", # Redefinition of unused variable
    "F541", # f-string without any placeholders
    "E711", # Comparison to `None` should be `cond is None`
    "E712", # Comparison to True/False - needed for testing boolean behavior
    "E714", # Test for object identity should be `is not`
    "E721", # Use `is` and `is not` for type comparisons, or `isinstance()` for isinstance checks
]
# iter mode tests use external functions defined in the test runner
per-file-ignores = { "crates/monty/test_cases/ext_call__*.py" = ["F821"] }

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
include = ["scripts", "crates/monty/test_cases"]
venv = ".venv"

# we include tests cases in type checking then switch off all rules that break
# so the files don't show as errors in the IDE
[[tool.pyright.executionEnvironments]]
root = "crates/monty/test_cases"
reportUnusedExpression = false
reportOperatorIssue = false
reportGeneralTypeIssues = false
reportUnknownMemberType = false
reportUnnecessaryComparison = false
reportUnnecessaryIsInstance = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnhashable = false
reportCallIssue = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportArgumentType = false
# iter mode tests use external functions defined in the test runner
reportUndefinedVariable = false
# loop variable persistence tests have "possibly unbound" variables
reportPossiblyUnboundVariable = false

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
ignore-words-list = 'crate,NotIn,ser'
